2024-10-17T00:58:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11376361829 # 451
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-17
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 125 351 / 126 352
* notice: next accum: outdated-unq outdated-all / unq all: 126 352 / 127 353
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-09-20] / [2024-10-16]

2024-09-21T00:55:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10968284618 # 425
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-21
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 123 337 / 125 351
* notice: next accum: outdated-unq outdated-all / unq all: 125 351 / 126 352
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-09-05] / [2024-09-20]

2024-09-06T00:59:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10730562120 # 410
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-06
* notice: last 14d: unq all: 2 14
* notice: prev accum: outdated-unq outdated-all / unq all: 122 330 / 123 337
* notice: next accum: outdated-unq outdated-all / unq all: 123 337 / 125 351
* notice: prev exec diff / last date diff / accum: unq all: +2 +14 -0 -0 / +2 +14 -0 -0 / 2 14
* notice: removed / changed dates: [2024-08-07] / [2024-09-05]

2024-08-19T00:58:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10445265978 # 392