@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2024-10-17T00:58:16Z",
+  "timestamp" : "2024-10-29T00:59:57Z",
   "count_outdated" : 352,
   "uniques_outdated" : 126,
-  "count" : 353,
-  "uniques" : 127,
+  "count" : 355,
+  "uniques" : 128,
   "views" : [
     {
       "timestamp": "2024-10-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-28T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
